# Go2-ReAct-Controller

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
src/unitree_go2_robot_controller/: __init__.py  __main__.py  audio.py  config.py  core.py  main.py  prompts.py  robot_runtime.py  speaker_backends.py  voice_runtime.py
src/unitree_go2_robot_controller/tools/: __init__.py  analyze_image.py  behavior_dance.py  dance.py  motion_move_distance.py  motion_move_timed.py  motion_rotate.py  move_by_distance.py  move_relative.py  posture_sit.py  posture_stand.py  posture_stretch.py  rotate_relative.py  sit_down.py  stand_up.py  stretch.py  take_image.py  vision_analyze_image.py  vision_capture_image.py
